erDiagram
    dictionary_types {
        UUID id PK
        string code UK
        string name
    }

    dictionary_values {
        UUID id PK
        string dictionary_type_code FK
        string code UK
        string name_ro
        string name_en
        boolean is_active
        int sort_order
    }

    companies {
        UUID id PK
        string name
        string address_type
        string country
        string county
        string city
        string postal_code
        string street
        string street_number
        string building
        string entrance
        string floor
        string apartment
        text additional_address_info
        string vat_number
        string registration_number
        string phone_number
        string role
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    users {
        UUID id PK
        UUID company_id FK
        string email
        string password_hash
        string full_name
        string phone_number
        string role
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    products {
        UUID id PK
        UUID company_id FK
        string sku
        string name
        string category
        int case_pack_quantity
        int pallet_quantity
        decimal net_weight
        string manufacturer
        text description
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    product_classifications {
        UUID id PK
        UUID product_id FK
        string classification_code FK
    }

    product_elements {
        UUID id PK
        UUID product_id FK
        string classification_code FK
        string type_code FK
        string material_code FK
        string name
        text description
        decimal weight_grams
        jsonb attributes
        datetime created_at
        datetime updated_at
    }

    whiteball_packaging_items {
        UUID id PK
        string type
        string subtype
        string material
        string name
        text description
        decimal weight_grams
        string source_id
        datetime created_at
        datetime updated_at
    }

    dictionary_types ||--o{ dictionary_values : "has"
    companies ||--o{ users : "has"
    companies ||--o{ products : "owns"
    products ||--o{ product_classifications : "has"
    dictionary_values ||--o{ product_classifications : "classifies"
    products ||--o{ product_elements : "contains"
    dictionary_values ||--o{ product_elements : "references"
